creacion de rama

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
-<app-estudiantes></app-estudiantes> 
-<app-facultades></app-facultades>
+<!-- <app-estudiantes></app-estudiantes> 
+<app-facultades></app-facultades> -->
